# viMarkdown

./: .gitignore  Daily Log  Key Features.md  LICENSE  README.md  README_ja.md  ToDo.md  help.md  viMarkdown 0.1 タスクリスト.md  viMarkdown-architecture.md  viMarkdown-loadmap.md  viMarkdown-menu.md  viMarkdown-quickstart.md  viMarkdown-roadmap.md  viMarkdown.spr  viMarkdown_0.2.spr
.github/ISSUE_TEMPLATE/: bug_report.txt  bug_report.yml
.github/workflow/: linux_build.yml
docs/: help.md
docs/ja/: dialogs.md  help.md  menu.md  quickstart.md
md_example/: ASCII.md  BOM_UTF-16LE.md  BOM_UTF-16_DBChar.md  BOM_UTF-8.md  BOM_UTF-8_DBChar.md  CSV.md  DBCS.md  Kernel.md  Key Features-001.md  Key Features-org.md  QTextDocument.md  Qiita, Zenn 投稿記事トピック案.md  SPR list 週次集計.md  SPR_stat.md  SPR件数週次集計.md  SVG PDCA.md  SVG UML class.md  SVG name card.md  SVG-2.md  SVG-3.md  SVG-4.md  SVG.md  Test GFM Table.md  ToDo.txt  UTF-16 BE.md  UTF-16_DBChar.md  UTF-8 with BOM.md  UTF-8.md  abc abc.md  abc xyz abc.md  abc.md  ac.md  bold italic strike.md  code block.md  keisen block.md  keisen.md  keisen_block.md  keisen_rect.md  misc.md  seq.txt  (+52 more)
tech/ja/: CMake.md  diff edit graph.md  viMarkdown コールツリー.md  エディタ・プレビューカーソル位置同期自動テストを実装してみた.md  罫線保護アルゴリズム.md  自動テスト.md  自動テスト原稿-000.md  自動テスト原稿-001.md  自動テスト原稿-002.md  自動テスト原稿-003.md  自動テスト原稿.md
tech/ja/LT20260514/: .~lock.viMarkdown_LT.odp#  Markdownエディタ作ってみた.md  icon.mdp  viMarkdown_LT.odp  viMarkdown_LT.pptx
tech/ja/LT20260614/: .~lock.SVGブロックを実装してみた.odp#  Markdown Editor Landscape.md  SVGブロックを実装してみた.md  SVGブロックを実装してみた.odp  Text Generation AI.md  transformer.md  viMarkdown 作ってみた.md  マークダウンエディタ勢力図.md
tech/ja/LT20260625/: viMarkdown SVG.md
tech/ja/LT20260708/: .~lock.自動テスト.odp#  viMarkdown作った（２）.md  自動テスト.md  自動テスト.odp  自動テスト_SVD.md  自動テスト原稿.md
tech/ja/LT20260719/: 自動テスト.odp
viMarkdown/: CMakeLists.txt  CMakeUserPresets.json  viMarkdown.slnx
viMarkdown/enc_temp_folder/37457a79e97e34c37b44029d999a2d7/: MarkdownEditor.cpp
viMarkdown/enc_temp_folder/456e332dd3abd9b1d6cf342175f9fbfd/: MarkdownEditor.cpp
viMarkdown/enc_temp_folder/5a2c35377fa8a3a622ca8f5495cb3934/: MarkdownEditor.cpp
viMarkdown/enc_temp_folder/8a1427570639efefbfae1cab16a26/: MarkdownPreview.cpp
viMarkdown/enc_temp_folder/aee74a80a5aaccf8c712dc637eb57bd/: MarkdownPreview.cpp
viMarkdown/enc_temp_folder/be59c8e3dcee415b75c8372775d65f37/: MarkdownEditor.cpp
viMarkdown/src/: AutoTest.cpp  CMakeLists.txt  DocWidget.cpp  DocWidget.h  GrepDialog.cpp  GrepDialog.h  GrepDialog.ui  LangDialog.cpp  LangDialog.h  LangDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownPreview.cpp  MarkdownPreview.h  MarkdownToHtmlConvertor.cpp  OutputView.cpp  OutputView.h  ReplaceDialog.cpp  ReplaceDialog.h  ReplaceDialog.ui  SettingsDialog-000.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SlideShow.cpp  SlideShow.h  diff.cpp  diff.h  main.cpp  ver.h  viMarkdown.vcxproj  viMarkdown.vcxproj.filters  viMarkdown_ja.qm  viMarkdown_ja.qm.txt  viMarkdown_ja.ts  vicmd.cpp
viMarkdown/src/images/: icon.mdp  icon512.mdp
viMarkdown/src/qm-000/: viMarkdown_ja.qm
viMarkdown/viMarkdown/: AutoTest.cpp  DocWidget.cpp  DocWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownPreview.cpp  MarkdownPreview.h  MarkdownToHtmlConvertor.cpp  MarkdownViewer.cpp  MarkdownViewer.h  ReplaceDialog.cpp  ReplaceDialog.h  ReplaceDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp  ver.h  viMarkdown.vcxproj  viMarkdown.vcxproj.filters
viMarkdownCMake/: CMakeLists.txt  main.cpp
viMarkdownCMake/src/: AutoTest.cpp  CMakeLists.txt  DocWidget.cpp  MarkdownEditor.cpp  MarkdownPreview.cpp  MarkdownPreview.h  SettingsDialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  ver.h
